# T4INF3602

./: .gitignore  notebook-bayes.ipynb  notebook-ortools.ipynb  notebook.ipynb  pyproject.toml  requirements.txt
DS_CSP_1/: pr_conf_000.csv
